--- a/index.html
+++ b/index.html
@@ -166,9 +166,9 @@
             <li id="sup_item_3" ><a href="#"> Policies</a></li>
           </ul>
         </div>
+        
       </div>
-      
-    <p class="rights">2014 ARK Studio - All Rights Reserved</p> 
+    <p  class="rights"> <span class="dot"></span> 2014 ARK Studio - All Rights Reserved</p> 
 
     </footer>
   </body>
