--- a/index.html
+++ b/index.html
@@ -161,14 +161,14 @@
         <div class="footer_support">
           <h3>Support</h3>
           <ul style="padding: 0;margin: 0;">
+        </ul>
             <li id="sup_item_1" ><a href="#"> FAQ</a></li>
             <li id="sup_item_2" ><a href="#"> Contact Us</a></li>
             <li id="sup_item_3" ><a href="#"> Policies</a></li>
-          </ul>
         </div>
         
       </div>
-    <p  class="rights"> <span class="dot"></span> 2014 ARK Studio - All Rights Reserved</p> 
+    <p  class="rights">2014 ARK Studio - All Rights Reserved</p> 
 
     </footer>
   </body>
